Update #8 - EventController - custom view 추가